<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/cabSearchColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/pickUpLocation"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/PicLocation"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/destination"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_layout"
                android:hint="@string/DropLocation"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPickACab"
                android:layout_width="245dp"
                android:layout_height="45dp"
                android:background="@drawable/ongoing_trip_btn"
                android:text="@string/PicVehicle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>