<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context=".UserDetailsScreen">

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/round_btn"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/editTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editbtn_register"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.903" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover_register"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundimageview"
        app:srcCompat="@drawable/cover" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#55FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cover_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_register"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/logo_register"
        android:layout_width="103dp"
        android:layout_height="120dp"
        android:layout_marginBottom="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/userdetails"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_register"/>


    <Button
        android:id="@+id/editbtn_register"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/round_btn"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/lightGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>