<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context=".PlanATripFirstScreen">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover_plan_atrip"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundimageviewSecond"
        app:srcCompat="@drawable/cover" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:text="@string/greeting2"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintEnd_toStartOf="@+id/userdata2"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toEndOf="@+id/backbutton"
        app:layout_constraintTop_toTopOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.215" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="#55FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back_arrow" />

    <ImageButton
        android:id="@+id/userdata"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="#55FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.20999998"
        app:srcCompat="@drawable/user_circle" />

    <ImageButton
        android:id="@+id/userdata2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#55FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintEnd_toStartOf="@+id/userdata3"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.228"
        app:srcCompat="@drawable/bell_vector" />

    <ImageButton
        android:id="@+id/userdata3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#55FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintEnd_toStartOf="@+id/userdata"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.214"
        app:srcCompat="@drawable/history_vector" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_layout"
        android:hint="@string/search"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:shapeAppearanceOverlay="@style/roundimageview" />

    <ImageButton
        android:id="@+id/userdata4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchText"
        app:layout_constraintEnd_toEndOf="@+id/searchText"
        app:layout_constraintTop_toTopOf="@+id/searchText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/search_vector" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="245dp"
        android:layout_height="52dp"
        android:background="@drawable/ongoing_trip_btn"
        android:text="@string/OTrip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        app:backgroundTint="@color/editTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/cover_plan_atrip"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/addbtn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/backcolor"
                app:cardElevation="2dp">

                <include layout="@layout/full_trip_layout" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/backcolor"
                app:cardElevation="2dp">


                <include layout="@layout/full_trip_layout" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/backcolor"
                app:cardElevation="2dp">

                <include layout="@layout/full_trip_layout" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>